# rust-actixexp

./: .gitignore  Cargo.toml  Dockerfile  actixexp-sample.toml  docker-compose.yml
schema/: package-lock.json  package.json
schema/prisma/: schema.prisma
schema/prisma/migrations/20210828111212_init/: migration.sql
schema/prisma/migrations/20210829103634_add_identity/: migration.sql
sql/: create_tables.sql
src/: actixexp.rs  app.rs  main.rs
src/app/: config.rs  context.rs  db.rs  errors.rs  handlers.rs  middlewares.rs  models.rs
src/app/config/: app.rs  auth.rs  database.rs  frontend.rs  server.rs
src/app/db/: connection.rs  identity_repository.rs  servant_repository.rs
src/app/handlers/: auth.rs  root.rs  servant.rs  sessions.rs
src/app/middlewares/: identity_validator.rs  login_required.rs
src/app/models/: auth.rs  identity.rs  servant.rs
src/app/models/servant/: deletion.rs  fetching.rs  listing.rs  registration.rs
