[package]
name = "actixexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2021"

[[bin]]
name = "actixexp"
path = "src/actixexp.rs"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
anyhow = "~1.0.100"
base64 = "~0.22.1"
clap = { version = "~4.5.47", features = ["derive"] }
deadpool-postgres = "0.14.1"
env_logger = "~0.11.8"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ['json'] }
serde = "~1.0.226"
serde_derive = "~1.0.225"
serde_json = "1.0.145"
thiserror = "~2.0.16"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-pg-mapper = "~0.2.0"
tokio-pg-mapper-derive = "~0.2.0"
tokio-postgres = "~0.7.13"
toml = "0.9.7"
