[package]
name = "actixexp"
version = "0.1.0"
authors = ["SAWADA Tadashi <cesare@mayverse.jp>"]
edition = "2021"

[[bin]]
name = "actixexp"
path = "src/actixexp.rs"

[dependencies]
actix-cors = "0.7.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.12.1"
anyhow = "~1.0.100"
base64 = "~0.22.1"
clap = { version = "~4.5.56", features = ["derive"] }
deadpool-postgres = "0.14.1"
env_logger = "~0.11.8"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = "~1.0.228"
serde_derive = "~1.0.225"
serde_json = "1.0.149"
thiserror = "~2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-pg-mapper = "~0.2.0"
tokio-pg-mapper-derive = "~0.2.0"
tokio-postgres = "~0.7.16"
toml = "0.9.11"
